Updated Website Files

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
       </div>
 
      <p class="scrolldown">
-        <arrow><a class="smoothscroll" href="#about"><i class="fa fa-arrow-circle-down"></i></a></arrow>
-        <pc><a href="https://www.instagram.com/mpandiscio24/?hl=en">PC: Meg Pandiscio</a></pc>
+        <arrow><a class="smoothscroll" href="#about">   <i class="fa fa-arrow-circle-down"></i></a></arrow>
+        <pc><a href="https://www.instagram.com/mpandiscio24/?hl=en">PC</a></pc>
      </p>
 
    </header> <!-- Header End -->
@@ -405,7 +405,7 @@
                               <p>Vehicle Object Detection</p>
           					   </div>
                         </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
+                        <div class="link-icon"><i class="fa fa-plus"></i></div>
                      </a>
 
                   </div>
@@ -422,7 +422,7 @@
                               <p>Image Captioning</p>
           					   </div>
                         </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
+                        <div class="link-icon"><i class="fa fa-plus"></i></div>
                      </a>
 
                   </div>
@@ -439,7 +439,7 @@
                               <p>Modelling Californian Wildfires</p>
           					   </div>
                         </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
+                        <div class="link-icon"><i class="fa fa-plus"></i></div>
                      </a>
 
                   </div>
@@ -456,7 +456,7 @@
                               <p>Web Development</p>
           					   </div>
                         </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
+                        <div class="link-icon"><i class="fa fa-plus"></i></div>
                      </a>
 
                   </div>
@@ -473,7 +473,7 @@
                               <p>Web Development</p>
                            </div>
                         </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
+                        <div class="link-icon"><i class="fa fa-plus"></i></div>
                      </a>
 
                   </div>
@@ -483,14 +483,14 @@
                   <div class="item-wrap">
 
                      <a href="#modal-06" title="">
-                        <img alt="" src="images/portfolio/d8.jpg">
+                        <img alt="" src="images/portfolio/diss.jpg">
                         <div class="overlay">
                            <div class="portfolio-item-meta">
           					      <h5>Dissipated Eight</h5>
                               <p>Web Development</p>
           					   </div>
                         </div>
-                        <div class="link-icon"><i class="icon-plus"></i></div>
+                        <div class="link-icon"><i class="fa fa-plus"></i></div>
                      </a>
 
                   </div>
@@ -507,7 +507,7 @@
                              <p>For Storing Things</p>
                       </div>
                        </div>
-                       <div class="link-icon"><i class="icon-plus"></i></div>
+                       <div class="link-icon"><i class="fa fa-plus"></i></div>
                     </a>
 
                  </div>
@@ -603,6 +603,7 @@
 		      </div>
 
             <div class="link-box">
+                <a href="https://github.com/tomgause/tomgause.com" target="_blank">Details</a>
 		         <a class="popup-modal-dismiss">Close</a>
             </div>
 
